<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent"
    >
    <LinearLayout
        android:layout_marginTop="50dp"
        android:background="@color/dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6"
        android:gravity="top"
        tools:ignore="UselessParent">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/day0"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/day_button"
                    android:onClick="weekDayClick"
                    android:tag="0"
                    android:text="@string/day0"
                    android:textColor="@color/dark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/day1"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/day_button"
                    android:onClick="weekDayClick"
                    android:tag="1"
                    android:text="@string/day1"
                    android:textColor="@color/dark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/day2"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/day_button"
                    android:onClick="weekDayClick"
                    android:tag="2"
                    android:text="@string/day2"
                    android:textColor="@color/dark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/day3"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/day_button"
                    android:onClick="weekDayClick"
                    android:tag="3"
                    android:text="@string/day3"
                    android:textColor="@color/dark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/day4"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/day_button"
                    android:onClick="weekDayClick"
                    android:tag="4"
                    android:text="@string/day4"
                    android:textColor="@color/dark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/day5"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/day_button"
                    android:onClick="weekDayClick"
                    android:tag="5"
                    android:text="@string/day5"
                    android:textColor="@color/dark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/day6"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/day_button"
                    android:onClick="weekDayClick"
                    android:tag="6"
                    android:text="@string/day6"
                    android:textColor="@color/dark"
                    android:textSize="14sp" />

            </LinearLayout>
        </HorizontalScrollView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainFrame"/>
    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:visibility="gone"
            android:id="@+id/menu_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55000000"/>
        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/menu"
            android:orientation="vertical"
            android:visibility="gone"/>
    </FrameLayout>
    <FrameLayout
        android:background="@color/dark"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/debug"
            android:textColor="@color/light"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="14dp"
            android:src="@drawable/ic_tasky_logo" />
        <ImageButton
            android:id="@+id/menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="14dp"
            android:layout_gravity="right"
            android:background="@color/dark"
            android:src="@drawable/ic_menu"/>
    </FrameLayout>
</FrameLayout>